Gap button on flex box and little correction for "Se connecter" button

--- a/res/register-login.css
+++ b/res/register-login.css
@@ -39,6 +39,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 6px;
 }
 
 #register-form-container
